--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,9 +14,13 @@
                 <h3>Detail Mahasiswa</h3>
                 <p>Nama: <%= userData.nama %></p>
                 <p>Universitas: <%= userData.univ %></p>
+                <p>Jurusan: <%= userData.jurusan %></p>
                 <p>NIM: <%= userData.nim %></p>
                 <p>Mulai: <%= moment(userData.mulai).format("YYYY-MM-DD") %></p>
                 <p>Akhir: <%= moment(userData.akhir).format("YYYY-MM-DD") %></p>
+                <p>Email: <%= userData.email %></p>
+                <p>Telepon: <%= userData.telepon %></p>
+                <p>Alamat: <%= userData.alamat %></p>
                 <p>Foto: <br><img src="/gambar/<%= userData.id %>" alt="Foto Mahasiswa" width="100" height="100"></p>
             </div>
         </div>
