--- a/views/profil.ejs
+++ b/views/profil.ejs
@@ -41,43 +41,47 @@
                         <tbody>
                           <tr>
                             <th scope="row">Nama Mahasiswa</th>
-                            <td>:   Apil</td>
-                          </tr>
-                          <tr>
-                            <th scope="row">Nomor Induk Mahasiswa</th>
-                            <td>:   062230701576</td>
+                            <td>:<%= userData.nama %></td>
                           </tr>
                           <tr>
                             <th scope="row">Universitas</th>
-                            <td>:   Politeknik Negeri Sriwijaya</td>
+                            <td>:   <%= userData.univ %></td>
                           </tr>
                           <tr>
                             <th scope="row">Jurusan</th>
-                            <td>:   IT</td>
+                            <td>:   <%= userData.jurusan %></td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Nomor Induk Mahasiswa</th>
+                            <td>:   <%= userData.nim %></td>
                           </tr>
                           <tr>
                             <th scope="row">Tanggal Masuk</th>
-                            <td>:   22/07/2024</td>
+                            <td>:   <%= moment(userData.mulai).format("DD/MM/YYYY") %></td>
                           </tr>
                           <tr>
                             <th scope="row">Tanggal Selesai</th>
-                            <td>:   22/10/2024</td>
+                            <td>:   <%= moment(userData.akhir).format("DD/MM/YYYY") %></td>
+                          </tr>
+                          <tr>
+                            <th scope="row">Email</th>
+                            <td>:   <%= userData.email %></td>
                           </tr>
                           <tr>
                             <th scope="row">No Telp</th>
-                            <td>:   089620296665</td>
+                            <td>:   <%= userData.telepon %></td>
                           </tr>
                           <tr>
                             <th scope="row">Alamat</th>
-                            <td>:   Jl. Letnan Yasin</td>
+                            <td>:   <%= userData.alamat %></td>
                           </tr>
                           <tr>
                             <th scope="row">Foto</th>
-                            <td>:   <img src="" width="100" height="100"></td>
+                            <td>:   <img src="/gambar/<%= userData.id %>" width="100" height="100"></td>
                           </tr>
                         </tbody>
                       </table>
-                      <a href="" class="btn btn-primary bi-key-fill"> Password</a>
+                      <a href="" class="btn btn-primary bi-key-fill"> Ubah Password</a>
                 </div>
             </div>
 
