--- a/views/tambah.ejs
+++ b/views/tambah.ejs
@@ -24,6 +24,12 @@
         </div>
       </div>
       <div class="row mb-3">
+        <label for="jurusan" class="col-sm-2 col-form-label">Jurusan</label>
+        <div class="col-sm-10">
+          <input type="text" name="jurusan" class="form-control" required>
+        </div>
+      </div>
+      <div class="row mb-3">
         <label for="nim" class="col-sm-2 col-form-label">NIM</label>
         <div class="col-sm-10">
           <input type="text" name="nim" class="form-control" required>
@@ -39,6 +45,24 @@
         <label for="akhir" class="col-sm-2 col-form-label">Akhir Magang</label>
         <div class="col-sm-10">
           <input type="date" name="akhir" class="form-control" required>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="email" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-10">
+          <input type="email" name="email" class="form-control" required>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="telepon" class="col-sm-2 col-form-label">No Telp</label>
+        <div class="col-sm-10">
+          <input type="text" name="telepon" class="form-control" required>
+        </div>
+      </div>
+      <div class="row mb-3">
+        <label for="alamat" class="col-sm-2 col-form-label">Alamat</label>
+        <div class="col-sm-10">
+          <textarea class="form-control mb-2" name="alamat" required></textarea>
         </div>
       </div>
       <div class="row mb-3">
